Привязка интерфейса к ядру бота

--- a/chatbot.kv
+++ b/chatbot.kv
@@ -112,4 +112,4 @@
                     pos_hint: {'center_x':.5}
                     pos_hint_y: None
                     pos: self.pos[0], actionbar.pos[1]-actionbar.height*1.5
-                    on_press: root.on_press()
+                    on_press: root.on_main_btn_press()
