--- a/chatbot.kv
+++ b/chatbot.kv
@@ -113,3 +113,11 @@
                     pos_hint_y: None
                     pos: self.pos[0], actionbar.pos[1]-actionbar.height*1.5
                     on_press: root.on_main_btn_press()
+
+            FloatLayout:
+                Apply:
+                    id: crack_pentagon_btn
+                    text: 'Взломать Пентагон'
+                    size_hint_x: .5
+                    pos_hint: {'center_x':.5, 'center_y': .5}
+                    on_press: self.text = root.crack_pentagon()
