--- a/chatbot.kv
+++ b/chatbot.kv
@@ -1,5 +1,5 @@
 <LB@Label>:
-    font_size: '14sp'
+    font_size: '15sp'
     color: 0, .2, .4, 1
     size_hint: None, None
     size: self.texture_size[0]+5, self.texture_size[1]+5
@@ -113,6 +113,11 @@
                     pos_hint_y: None
                     pos: self.pos[0], actionbar.pos[1]-actionbar.height*1.5
                     on_press: root.on_main_btn_press()
+                Head:
+                    id: answers_count_lb
+                    pos_hint: {'center_x':.5}
+                    pos_hint_y: None
+                    pos: self.pos[0], button.pos[1]-actionbar.height*1.3
 
             FloatLayout:
                 Apply:
