Измененён текст кнопки

--- a/chatbot.kv
+++ b/chatbot.kv
@@ -98,7 +98,7 @@
                         on_release:  
                             root.parent.current = 'login_screen'
                     ActionButton:
-                        text: 'Logout'
+                        text: 'Выйти'
                         on_release: root.logout()
 
         Carousel:
