Перемещение картинки фона

--- a/chatbot.kv
+++ b/chatbot.kv
@@ -28,7 +28,7 @@
         #Color: 
             #rgba: .85, .66, .01, 1
         Rectangle:
-            source: 'background.jpg'
+            source: 'data/images/background.jpg'
             pos: self.pos
             size: self.size
 
