Код перемещён в kv файл

--- a/uix/kv/chatbot.kv
+++ b/uix/kv/chatbot.kv
@@ -1,3 +1,5 @@
+#:import FadeTransition kivy.uix.screenmanager.FadeTransition
+
 <LB@Label>:
     font_size: '15sp'
     color: 0, .2, .4, 1
@@ -21,6 +23,10 @@
     background_color: 0, .2, .4, 1
     size_hint: None, None
     size: self.texture_size[0]*2.3, self.texture_size[1]*2.3
+
+<Root>:
+    id: rootscr
+    transition: FadeTransition()
 
 
 <Screen@Screen>:
