Добавлена функция перехода на экран настройки пользовательских команд

--- a/uix/kv/chatbot.kv
+++ b/uix/kv/chatbot.kv
@@ -153,6 +153,7 @@
                     on_press: self.text = 'В разработке'
 
 <CustomCommandsScreen>:
+    name: 'cc_screen'
     Apply:
         text: 'Вернуться'
         pos_hint: {'center_x':.5}
