Исправлено имя экрана

--- a/uix/kv/vkbotapp.kv
+++ b/uix/kv/vkbotapp.kv
@@ -33,7 +33,7 @@
 
 
 <TwoFAKeyEnterForm>:
-    name: 'twofa_form'
+    name: 'twofa_screen'
     
     Head:
         text: 'Код для двухфакторной авторизации'
