--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -168,7 +168,32 @@
                 cols: 1
                 spacing: dp(2)
 
-        Apply:
-            text: 'Вернуться'
-            pos_hint: {'center_x':.5}
-            on_press: root.leave()
+        GridLayout:
+            cols: 3
+            size_hint_y: None
+            height: self.minimum_height
+
+            GridLayout:
+                cols: 2
+
+                Button:
+                    text: 'Добавить команду'
+                    size_hint_x: None
+                    width: self.texture_size[0]
+                    on_release: root.open_edit_popup()
+
+                Label:
+            Button:
+                text: 'Вернуться'
+                size_hint_y: None
+                height: self.texture_size[1]*2.4 + dp(3)
+                on_release: root.leave()
+            GridLayout:
+                cols: 2
+
+                Label:
+                Button:
+                    text: 'Отсортировать'
+                    size_hint_x: None
+                    width: self.texture_size[0] + dp(3)
+                    on_release: root.sort_blocks()
