Переименована функция попадания на главный экран

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -96,7 +96,7 @@
         pos_hint: {'center_x':.5}
         background_color: 0, .2, .4, .5
         pos: self.pos[0], root.height*.05
-        on_release: root.parent.show_home_screen()
+        on_release: root.parent.show_main_screen()
 
 
 <MainScreen>:
