Исправлен внешний вид экрана авторизации на более новых версиях kivy

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -56,9 +56,9 @@
     GridLayout:
         rows: 5
         spacing: dp(3)
-        size_hint_y: None
+        size_hint: .7, None
         height: self.minimum_height
-        pos_hint: {'center_x':.6,'center_y':.75}
+        pos_hint: {'center_x':.5,'center_y':.75}
 
         Label:
             text: 'Авторизация ВК'
