Изменено правила определения ширины полей ввода текста

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -99,7 +99,7 @@
             size_hint: None, None
             font_size: '18sp'
             height: self.minimum_height
-            width: gridlayout.width
+            width: self.height*10
             multiline: False
 
         TextInput:
@@ -108,7 +108,7 @@
             size_hint: None, None
             font_size: '18sp'
             height: self.minimum_height
-            width: gridlayout.width
+            width: self.height*10
             multiline: False
             password: show_pass.active == False
 
