--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -203,7 +203,7 @@
                 Apply:
                     id: open_cc_screen_btn
                     text: 'Настройки пользовательских команд'
-                    width: main_btn.width
+                    width: self.texture_size[0] + dp(4)
                     pos_hint: {'center_x':.5, 'center_y':.1}
                     on_press: root.parent.show_custom_commands_screen()
                     disabled: True
