Изменены названия кнопок

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -243,7 +243,7 @@
                 cols: 2
 
                 Button:
-                    text: 'Добавить команду'
+                    text: 'Добавить'
                     size_hint_x: None
                     width: self.texture_size[0]
                     on_release: root.open_edit_popup()
@@ -259,7 +259,7 @@
 
                 Label:
                 Button:
-                    text: 'Отсортировать'
+                    text: 'Сортировка'
                     size_hint_x: None
                     width: self.texture_size[0] + dp(3)
                     on_release: root.sort_blocks()
