Класс кнопки с командой объявляется в kv файле

--- a/uix/kv/customcommandblock.kv
+++ b/uix/kv/customcommandblock.kv
@@ -2,19 +2,25 @@
     cols: 1
     size_hint_y: None
     height: self.minimum_height
+    
     __safe_id: [dropdown.__self__]
 
-    Button:
+    CommandButton:
         id: dropdown_btn
         text: 'команда'
-        font_size: '15sp'
-        background_normal: ''
         background_color: 0, .2, .4, 1
-        size_hint_y: None
         height: self.texture_size[1]*2.3
         
     DropDown:
-        #required_spacing: dp(3)
-
         id: dropdown
+        required_spacing: dp(2)
+
         on_parent: self.dismiss()
+
+
+<CommandButton>:
+    font_size: '15sp'
+    background_normal: ''
+    background_color: .24, .69, .55, 1
+    size_hint_y: None
+    # height: self.texture_size[1]*2.3 # crash
