Добавлена функция создания всплывающего окна настройки для новой команды

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -243,7 +243,7 @@
                     text: 'Добавить'
                     size_hint_x: None
                     width: self.texture_size[0] + dp(5)
-                    on_release: root.open_edit_popup()
+                    on_release: root.open_new_command_popup()
 
                 Widget:
             Button:
