--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -32,47 +32,40 @@
             size: self.size
 
 
-<TwoFAKeyEnterScreen>:
-    name: 'twofa_screen'
-    
+<TwoFAKeyEnterPopup>:
+    size_hint_y: None
+    size_hint_x: None
+    width: gl.width + dp(30)
+    height: gl.height + dp(30)
+    pos_hint: {'center_y': 0.7}
+
     GridLayout:
-        rows: 3
-        spacing: dp(6)
-        size_hint: .7, None
-        size: self.minimum_size
-        pos_hint: {'center_x':.5,'center_y':.75}
-        
+        id: gl
+        cols: 1
+        size_hint: None, None
+        width: app.root_window.width*0.75
+        height: self.minimum_height
+        orientation: 'vertical'
+
         Label:
-            text: 'Код для двухфакторной авторизации'
-            color: 0, .2, .4, 1
-            font_size: '20sp'
-            padding_y: dp(5)
-            size_hint: None, None
-            size: self.texture_size
-
-        TextInput:
-            id: twofa_textinput
+            text: 'Код для двухфакторной авторизации:'
+            font_size: sp(20)
             size_hint_y: None
-            font_size: '18sp'
-            height: self.minimum_height
-            multiline: False
-
-        GridLayout:
-            cols: 3
+            height: self.texture_size[1] + dp(10)
+        BoxLayout:
             size_hint_y: None
-            size: self.minimum_size
 
-            Label:
+            TextInput:
+                id: textinput
+                multiline: False
+                font_size: sp(45)
+                focus: True
             Button:
-                text: 'Подтвердить'
-                font_size: '16sp'
-                padding_y: dp(10)
-                background_normal: ''
-                background_color: 0, .2, .4, 1
-                size_hint: 1.3, None
-                height: self.texture_size[1]
-                on_release: root.twofa_auth()
-            Label:
+                text: 'Ввод'
+                font_size: sp(20)
+                size_hint: None, None
+                width: self.texture_size[0] + dp(8)
+                on_release: root.twofa_auth(textinput.text)
 
 
 <AuthScreen>:
