--- a/uix/kv/customcommandblock.kv
+++ b/uix/kv/customcommandblock.kv
@@ -15,6 +15,7 @@
 
 
 <CommandButton>:
+    font_name: 'Roboto-BoldItalic'
     background_normal: ''
     background_color: .24, .69, .55, 1
     halign: 'center'
