--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -1,7 +1,13 @@
 #: import LowerTextInput uix.lowertextinput
 
+<Button>:
+    font_name: 'Roboto-BoldItalic'
+
+<TextInput>:
+    font_name: 'Roboto-BoldItalic'
 
 <EditCommandPopup>:
+    title_font: 'Roboto-BoldItalic'
     size_hint_y: None
     height: content.height*1.3
     pos_hint: {'center_y':.6}
