--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -1,3 +1,21 @@
+<Label>:
+    font_name: 'Roboto-BoldItalic'
+
+<Button>:
+    font_name: 'Roboto-BoldItalic'
+
+<TextInput>:
+    font_name: 'Roboto-BoldItalic'
+
+<Screen>:
+    canvas.before:
+        #Color: 
+            #rgba: .85, .66, .01, 1
+        Rectangle:
+            source: 'data/images/background.jpg'
+            pos: self.pos
+            size: self.size
+
 <LB@Label>:
     font_size: '15sp'
     color: 0, .2, .4, 1
@@ -21,15 +39,6 @@
     background_color: 0, .2, .4, 1
     size_hint: None, None
     size: self.texture_size[0]*2.3, self.texture_size[1]*2.3
-
-<Screen@Screen>:
-    canvas.before:
-        #Color: 
-            #rgba: .85, .66, .01, 1
-        Rectangle:
-            source: 'data/images/background.jpg'
-            pos: self.pos
-            size: self.size
 
 
 <TwoFAKeyEnterPopup>:
