--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -3,13 +3,16 @@
 <Button>:
     font_name: 'Roboto-BoldItalic'
 
+<ToggleButton>:
+    font_name: 'Roboto-BoldItalic'
+
 <TextInput>:
     font_name: 'Roboto-BoldItalic'
 
 <EditCommandPopup>:
     title_font: 'Roboto-BoldItalic'
     size_hint_y: None
-    height: content.height*1.3
+    height: content.height + dp(70)
     pos_hint: {'center_y':.6}
 
     GridLayout:
@@ -20,7 +23,7 @@
         spacing: dp(6)
 
         GridLayout:
-            rows: 2
+            rows: 3
             size_hint_y: None
             height: self.minimum_height
             spacing: dp(5)
@@ -35,6 +38,45 @@
                 size_hint_y: None
                 height: self.font_size*6
                 hint_text: 'Ответ'.decode('utf8')
+            GridLayout:
+                cols: 5
+                size_hint_y: None
+                height: self.minimum_height
+                spacing: dp(5)
+
+                ToggleButton:
+                    id: regex_btn
+                    text: '      r      '
+                    font_size: '16sp'
+                    background_color: 1, 0, 0, .6
+                    size_hint: None, None
+                    size: self.texture_size[0], self.texture_size[1]*2.3
+                    on_release: self.background_color = [0, 1, 0, .6] if self.background_color[:-1] == [1, 0, 0] else [1, 0, 0, .6]
+                ToggleButton:
+                    id: force_unmark_btn
+                    text: "      !'      "
+                    font_size: '16sp'
+                    background_color: 1, 0, 0, .6
+                    size_hint: None, None
+                    size: self.texture_size[0], self.texture_size[1]*2.3
+                    on_release: self.background_color = [0, 1, 0, .6] if self.background_color[:-1] == [1, 0, 0] else [1, 0, 0, .6]
+                ToggleButton:
+                    id: force_forward_btn
+                    text: "      f      "
+                    font_size: '16sp'
+                    background_color: 1, 0, 0, .6
+                    size_hint: None, None
+                    size: self.texture_size[0], self.texture_size[1]*2.3
+                    on_release: self.background_color = [0, 1, 0, .6] if self.background_color[:-1] == [1, 0, 0] else [1, 0, 0, .6]
+                ToggleButton:
+                    id: disable_btn
+                    text: "   disable   "
+                    font_size: '16sp'
+                    background_color: 1, 0, 0, .6
+                    size_hint: None, None
+                    size: self.texture_size[0], self.texture_size[1]*2.3
+                    on_release: self.background_color = [0, 1, 0, .6] if self.background_color[:-1] == [1, 0, 0] else [1, 0, 0, .6]
+                Widget:
         GridLayout:
             cols: 3
             size_hint_y: None
@@ -48,7 +90,7 @@
                 id: delete_command_btn
                 text: '      X      '
                 font_size: '16sp'
-                background_color: 1, 0, 0, .6
+                background_color: 1, 0, 0, 1
                 size_hint: None, None
                 size: self.texture_size[0], self.texture_size[1]*2.3
             Button:
