--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -39,7 +39,7 @@
                 height: self.font_size*6
                 hint_text: 'Ответ'.decode('utf8')
             GridLayout:
-                cols: 5
+                cols: 6
                 size_hint_y: None
                 height: self.minimum_height
                 spacing: dp(5)
@@ -69,8 +69,16 @@
                     size: self.texture_size[0], self.texture_size[1]*2.3
                     on_release: self.background_color = [0, 1, 0, .6] if self.background_color[:-1] == [1, 0, 0] else [1, 0, 0, .6]
                 ToggleButton:
+                    id: appeal_only_btn
+                    text: "      /      "
+                    font_size: '16sp'
+                    background_color: 1, 0, 0, .6
+                    size_hint: None, None
+                    size: self.texture_size[0], self.texture_size[1]*2.3
+                    on_release: self.background_color = [0, 1, 0, .6] if self.background_color[:-1] == [1, 0, 0] else [1, 0, 0, .6]
+                ToggleButton:
                     id: disable_btn
-                    text: "   disable   "
+                    text: " disable "
                     font_size: '16sp'
                     background_color: 1, 0, 0, .6
                     size_hint: None, None
